# iot-complex

./:  circuit diagram.drawio  .gitignore  sdkconfig.old
components/camera/: component.mk
components/commands/: commands.c
components/commands/include/: commands.h
components/commands_handle/: commands_handle.c
components/commands_handle/include/: commands_handle.h
components/defines/: CMakeLists.txt  defines.h
components/esp32-camera/conversions/: to_jpg.cpp
components/esp32-camera/examples/: take_picture.c
components/esp_now_routine/: esp_now_routine.c
components/esp_now_routine/include/: esp_now_routine.h
components/http_server/: CMakeLists.txt  http_server.c
components/http_server/include/: custom_http_server.h
components/move_sensor/: CMakeLists.txt  movement.c
components/move_sensor/include/: movement.h
components/uart_console/: uart_console.c
components/uart_console/include/: uart_console.h
components/uart_utils_funcs/: uart_utils_funcs.c
components/uart_utils_funcs/include/: uart_utils_funcs.h
components/websocket/: CMakeLists.txt  websocket.c
components/websocket/include/: websocket.h
components/wifi_connection/: wifi_connection.c
components/wifi_events/: CMakeLists.txt  wifi_events.c
components/wifi_events/include/: wifi_events.h
html/: app.js
main/: CMakeLists.txt  main.c
main/include/: main.h
